tests/NormalTests/paczka1/small_fuzzy/63831456.err
Error in line 8: WWK6C A534 (5,1
Error in line 2: WWK6C A534 26,2
